<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NodeScanActivityFragment">

  <ProgressBar
      android:id="@+id/progressbar"
      style="@style/Widget.AppCompat.ProgressBar.Horizontal"
      android:layout_width="match_parent"
      android:layout_height="16dp"
      android:layout_alignParentTop="true"
      android:layout_marginBottom="-7dp"
      android:layout_marginTop="-7dp"
      android:indeterminate="true"/>

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/progressbar"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/layout_scanning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

      <TextView
          style="@style/TextAppearance.AppCompat.Body2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/scan_scanning_primary_text"/>

      <TextView
          style="@style/TextAppearance.AppCompat.Body1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/scan_scanning_secondary_text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_no_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

      <TextView
          style="@style/TextAppearance.AppCompat.Body2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/scan_no_results_primary_text"/>

      <TextView
          style="@style/TextAppearance.AppCompat.Body1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/scan_no_results_secondary_text"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_results_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

      <TextView
          android:id="@+id/txt_instructions"
          style="@style/TextAppearance.AppCompat.Body2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="16dp"
          android:text="@string/scan_results_instructions"/>

      <android.support.v7.widget.RecyclerView
          android:id="@+id/ap_list"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_below="@id/txt_instructions"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:paddingLeft="@dimen/activity_horizontal_margin"
          android:paddingRight="@dimen/activity_horizontal_margin"
          android:paddingTop="@dimen/activity_vertical_margin">
      </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

  </FrameLayout>

</RelativeLayout>
